samples/_failures_safe/1761307382_76cd37_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_48291997.c: In function ‘main’:
./samples/SAFE/__tmp_48291997.c:150:5: error: expected declaration or statement at end of input
  150 |     }
      |     ^
